--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
-    <link rel="stylesheet" href="./Css/indexStyle.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
+    <script src="Script.js"></script>
 </head>
 <body>
     <h1>Imperio's Burger</h1>
 
     <div class="container">
 
-        <a href="menu.html"><button class="tableButton">Mesa 1</button></a>
-        <a href="menu.html"><button class="tableButton">Mesa 2</button></a>
-        <a href="menu.html"><button class="tableButton">Mesa 3</button></a>
-        
+       <a href="menu.html"> <input type="button" value="Mesa 1" class="tableButtons"></a>
+       <a href="menu.html"> <input type="button" value="Mesa 2" class="tableButtons"></a>
+       <a href="menu.html"> <input type="button" value="Mesa 3" class="tableButtons"></a>
     </div>
 </body>
 </html>
